--- a/Pipfile
+++ b/Pipfile
@@ -13,18 +13,18 @@ flask-migrate = "*"
 flask-swagger = "*"
 psycopg2-binary = "*"
 python-dotenv = "*"
-mysql-connector-python = "*"
 flask-cors = "*"
 gunicorn = "*"
-mysqlclient = "*"
 flask-admin = "*"
+requests = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.9"
 
 [scripts]
-start="flask run -p 3000 -h 0.0.0.0"
+start="flask run -p 5000 -h 0.0.0.0"
 init="flask db init"
 migrate="flask db migrate"
 upgrade="flask db upgrade"
 deploy="echo 'Please follow this 3 steps to deploy: https://github.com/4GeeksAcademy/flask-rest-hello/blob/master/README.md#deploy-your-website-to-heroku' "
+populate_db="flask populate-db"
